[gd_scene load_steps=44 format=2]

[ext_resource path="res://Scenes/InGameLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Tileset_n.png" type="Texture" id=2]
[ext_resource path="res://Assets/Tileset.png" type="Texture" id=3]
[ext_resource path="res://Scenes/WallMaterial.tres" type="Material" id=4]
[ext_resource path="res://Scenes/LevelIntro.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Stairs.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Floor.gd" type="Script" id=8]
[ext_resource path="res://Scenes/Levels/BaseLevel.gd" type="Script" id=9]
[ext_resource path="res://Scenes/Character.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Tileset-floor.png" type="Texture" id=11]

[sub_resource type="TileSet" id=1]
0/name = "Tileset-floor.png 0"
0/texture = ExtResource( 11 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 96, 160, 96 )
0/tile_mode = 1
0/autotile/bitmask_mode = 0
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 256, Vector2( 0, 1 ), 260, Vector2( 0, 2 ), 4, Vector2( 1, 0 ), 320, Vector2( 1, 1 ), 325, Vector2( 1, 2 ), 5, Vector2( 2, 0 ), 320, Vector2( 2, 1 ), 325, Vector2( 2, 2 ), 5, Vector2( 3, 0 ), 320, Vector2( 3, 1 ), 325, Vector2( 3, 2 ), 5, Vector2( 4, 0 ), 64, Vector2( 4, 1 ), 65, Vector2( 4, 2 ), 1 ]
0/autotile/icon_coordinate = Vector2( 2, 1 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 32, 32, 0, 32, 0, 24, 32, 24 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( 8, 32, 0, 32, 0, 0, 8, 0 )

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 0, 0, 0, 32, 32, 32, 32, 24, 8, 24, 8, 0 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( 32, 32, 0, 32, 0, 24, 32, 24 )

[sub_resource type="OccluderPolygon2D" id=6]
polygon = PoolVector2Array( 32, 32, 0, 32, 0, 24, 32, 24 )

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 32, 32, 0, 32, 0, 24, 32, 24 )

[sub_resource type="OccluderPolygon2D" id=8]
polygon = PoolVector2Array( 32, 32, 24, 32, 24, 0, 32, 0 )

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( 0, 24, 0, 32, 32, 32, 32, 0, 24, 0, 24, 24 )

[sub_resource type="OccluderPolygon2D" id=10]
polygon = PoolVector2Array( 32, 32, 24, 32, 24, 24, 32, 24 )

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( 32, 32, 24, 32, 24, 0, 32, 0 )

[sub_resource type="OccluderPolygon2D" id=12]
polygon = PoolVector2Array( 32, 32, 0, 32, 0, 24, 32, 24 )

[sub_resource type="OccluderPolygon2D" id=13]
polygon = PoolVector2Array( 32, 32, 0, 32, 0, 24, 32, 24 )

[sub_resource type="OccluderPolygon2D" id=14]
polygon = PoolVector2Array( 8, 32, 0, 32, 0, 24, 8, 24 )

[sub_resource type="OccluderPolygon2D" id=15]
polygon = PoolVector2Array( 8, 32, 0, 32, 0, 0, 8, 0 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 32, 32, 0, 32, 0, 24, 32, 24 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 8, 32, 0, 32, 0, 0, 8, 0 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 32, 32, 24, 32, 24, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=19]
points = PoolVector2Array( 32, 32, 0, 32, 0, 24, 32, 24 )

[sub_resource type="ConvexPolygonShape2D" id=20]
points = PoolVector2Array( 0, 24, 24, 24, 24, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=21]
points = PoolVector2Array( 8, 0, 8, 24, 32, 24, 32, 32, 0, 32, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=22]
points = PoolVector2Array( 32, 32, 0, 32, 0, 24, 32, 24 )

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 32, 32, 24, 32, 24, 24, 32, 24 )

[sub_resource type="ConvexPolygonShape2D" id=24]
points = PoolVector2Array( 32, 32, 0, 32, 0, 24, 32, 24 )

[sub_resource type="ConvexPolygonShape2D" id=25]
points = PoolVector2Array( 32, 32, 0, 32, 0, 24, 32, 24 )

[sub_resource type="ConvexPolygonShape2D" id=26]
points = PoolVector2Array( 32, 32, 24, 32, 24, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 8, 32, 0, 32, 0, 24, 8, 24 )

[sub_resource type="ConvexPolygonShape2D" id=28]
points = PoolVector2Array( 8, 32, 0, 32, 0, 0, 8, 0 )

[sub_resource type="ConvexPolygonShape2D" id=29]
points = PoolVector2Array( 32, 32, 0, 32, 0, 24, 32, 24 )

[sub_resource type="TileSet" id=30]
0/name = "Tileset.png 0"
0/texture = ExtResource( 3 )
0/normal_map = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 224, 128 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 1, 0 ), 504, Vector2( 1, 2 ), 63, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 3, 1 ), 255, Vector2( 3, 2 ), 507, Vector2( 4, 1 ), 504, Vector2( 4, 2 ), 504, Vector2( 4, 3 ), 511, Vector2( 5, 1 ), 447, Vector2( 5, 2 ), 510 ]
0/autotile/icon_coordinate = Vector2( 4, 3 )
0/autotile/tile_size = Vector2( 32, 32 )
0/autotile/spacing = 0
0/autotile/occluder_map = [ Vector2( 0, 0 ), SubResource( 2 ), Vector2( 0, 1 ), SubResource( 3 ), Vector2( 0, 2 ), SubResource( 4 ), Vector2( 1, 0 ), SubResource( 5 ), Vector2( 1, 2 ), SubResource( 6 ), Vector2( 2, 0 ), SubResource( 7 ), Vector2( 2, 1 ), SubResource( 8 ), Vector2( 2, 2 ), SubResource( 9 ), Vector2( 3, 1 ), SubResource( 10 ), Vector2( 3, 2 ), SubResource( 11 ), Vector2( 4, 1 ), SubResource( 12 ), Vector2( 4, 2 ), SubResource( 13 ), Vector2( 5, 1 ), SubResource( 14 ), Vector2( 5, 2 ), SubResource( 15 ) ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, -1 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 16 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 19 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 20 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 21 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 22 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 24 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 25 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 26 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 5, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 28 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 4, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 29 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Animation" id=31]
resource_name = "LevelIn"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=32]
resource_name = "LevelOut"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Level" type="Node2D"]
script = ExtResource( 9 )

[node name="Floor" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
script = ExtResource( 8 )
walls_path = NodePath("../YSort/Walls")

[node name="Stairs" parent="Floor" instance=ExtResource( 6 )]

[node name="YSort" type="YSort" parent="."]

[node name="Walls" type="TileMap" parent="YSort"]
material = ExtResource( 4 )
tile_set = SubResource( 30 )
cell_size = Vector2( 32, 32 )
cell_tile_origin = 2
cell_y_sort = true
format = 1

[node name="Character" parent="YSort" instance=ExtResource( 10 )]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.278431, 0.278431, 0.278431, 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 7 )]
player_path = NodePath("../../YSort/Character")

[node name="RichTextLabel" parent="CanvasLayer" instance=ExtResource( 1 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -20.0
margin_right = 0.0
margin_bottom = -4.0
raw_text = "Talk with [ACTION]"

[node name="Intro" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
intro = "This is a Test Level"

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
autoplay = "LevelIn"
anims/LevelIn = SubResource( 31 )
anims/LevelOut = SubResource( 32 )

[connection signal="next_level" from="Floor/Stairs" to="." method="next_level"]
[connection signal="dead" from="YSort/Character" to="." method="_on_Character_dead"]
[connection signal="health_changed" from="YSort/Character" to="CanvasLayer/HUD" method="health_changed"]
[connection signal="next_level" from="CanvasLayer/Intro" to="." method="_on_Intro_next_level"]
